--- a/app/src/main/res/layout/activity_listitem8.xml
+++ b/app/src/main/res/layout/activity_listitem8.xml
@@ -8,7 +8,7 @@
     android:background="@color/white"
     android:orientation="vertical"
     android:layout_margin="5dp"
-    tools:context=".ListitemActivity8">
+    tools:context=".Activity8Listitem">
 
     <LinearLayout
         android:layout_width="match_parent"
