--- a/app/src/main/res/layout/activity_certified2.xml
+++ b/app/src/main/res/layout/activity_certified2.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#EBE9E3"
     android:orientation="vertical"
-    tools:context=".CertifiedActivity2" >
+    tools:context=".Activity2Certified" >
 
     <LinearLayout
         android:layout_width="match_parent"
