--- a/app/src/main/res/layout/activity_individchat6.xml
+++ b/app/src/main/res/layout/activity_individchat6.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".IndividchatActivity6">
+    tools:context=".Activity6Individchat">
 
     <LinearLayout
         android:layout_width="match_parent"
