--- a/app/src/main/res/layout/activity_reader4.xml
+++ b/app/src/main/res/layout/activity_reader4.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ReaderActivity4">
+    tools:context=".Activity4Reader">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
