--- a/app/src/main/res/layout/activity_certified2.xml
+++ b/app/src/main/res/layout/activity_certified2.xml
@@ -14,14 +14,14 @@
         android:orientation="vertical"></LinearLayout>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imgv_Like"
         android:layout_width="357dp"
         android:layout_height="197dp"
         android:layout_gravity="center_horizontal"
         app:srcCompat="@drawable/certification_txt" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/ibtn_Attach"
         android:layout_width="300dp"
         android:layout_height="87dp"
         android:layout_gravity="center"
