--- a/app/src/main/res/layout/activity_individchat6.xml
+++ b/app/src/main/res/layout/activity_individchat6.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/btn_Out"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
