--- a/app/src/main/res/layout/activity_intro1.xml
+++ b/app/src/main/res/layout/activity_intro1.xml
@@ -9,7 +9,7 @@
     tools:context=".Activity1Intro">
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/imgv_Title"
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
@@ -17,14 +17,14 @@
         tools:layout_gravity="center" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imgv_MainDoor"
         android:layout_width="wrap_content"
         android:layout_height="377dp"
         android:layout_gravity="center"
         app:srcCompat="@drawable/main_door" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/imgv_TapToEnter"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
