--- a/app/src/main/res/layout/activity_listitem8.xml
+++ b/app/src/main/res/layout/activity_listitem8.xml
@@ -16,6 +16,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/imgv_Profile"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:padding="5dp"
