--- a/app/src/main/res/layout/activity_writer5.xml
+++ b/app/src/main/res/layout/activity_writer5.xml
@@ -29,7 +29,8 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:text="제목을 입력해주세요."
-            android:textSize="22sp" />
+            android:textSize="22sp"
+            tools:ignore="TouchTargetSizeCheck" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -58,25 +59,27 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/btn_PhotoAtt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
+            android:background="#00ff0000"
             android:backgroundTint="#FFFFFF"
             android:drawableTop="@drawable/photo_att_btn"
             android:minWidth="0dp"
             android:minHeight="0dp"
-            android:background="#00ff0000"/>
+            tools:ignore="SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btn_WriteFin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="165dp"
             android:layout_marginTop="30dp"
+            android:background="#00ff0000"
             android:backgroundTint="#FFFFFF"
             android:drawableTop="@drawable/write_fin_btn"
-            android:background="#00ff0000"/>
+            tools:ignore="SpeakableTextPresentCheck" />
 
     </LinearLayout>
 
