--- a/app/src/main/res/layout/activity3_main.xml
+++ b/app/src/main/res/layout/activity3_main.xml
@@ -55,7 +55,7 @@
         android:background="#FFFFFF">
 
         <ListView
-            android:id="@+id/ListView"
+            android:id="@+id/main_ListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
