--- a/app/src/main/res/layout/activity4_reader.xml
+++ b/app/src/main/res/layout/activity4_reader.xml
@@ -4,6 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EBE9E3"
+    android:paddingLeft="5dp"
+    android:paddingTop="5dp"
+    android:paddingEnd="5dp"
+    android:paddingBottom="5dp"
     android:orientation="vertical"
     tools:context=".Activity4Reader">
 
@@ -12,9 +17,6 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:background="@color/white"
-        android:layout_marginTop="18dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginRight="7dp"
         android:fillViewport="true">
 
         <RelativeLayout
@@ -105,15 +107,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="5dp"
-                android:paddingLeft="14dp"
-                android:paddingRight="14dp">
+                android:padding="4dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp">
 
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="14dp"
+                    android:paddingLeft="12dp"
                     android:text="익명"
                     android:textSize="15dp" />
 
@@ -121,7 +123,7 @@
                     android:id="@+id/editTextTextPersonName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="14dp"
+                    android:paddingLeft="12dp"
                     android:hint="댓글을 입력하세요."
                     android:textSize="15dp"/>
 
