--- a/app/src/main/res/layout/activity4_reader.xml
+++ b/app/src/main/res/layout/activity4_reader.xml
@@ -81,7 +81,7 @@
                     app:srcCompat="@drawable/like_btn" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView"
+                    android:id="@+id/commentRecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp" />
