--- a/app/src/main/res/layout/activity6_individchat.xml
+++ b/app/src/main/res/layout/activity6_individchat.xml
@@ -30,7 +30,7 @@
         android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/ichatrecyclerView"
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
