--- a/app/src/main/res/layout/activity3_signup.xml
+++ b/app/src/main/res/layout/activity3_signup.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SignUpActivity">
+    tools:context=".Activity3SignUp">
 
     <EditText
         android:id="@+id/sign_up_email"
