사용자 인증 사진 첨부

--- a/app/src/main/res/layout/activity4_certified.xml
+++ b/app/src/main/res/layout/activity4_certified.xml
@@ -28,4 +28,10 @@
         android:background="#EBE9E3"
         android:scaleType="centerInside"
         app:srcCompat="@drawable/attach_btn" />
+
+    <Button
+        android:id="@+id/ibtn_intent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
 </LinearLayout>
