--- a/app/src/main/res/layout/activity2_login.xml
+++ b/app/src/main/res/layout/activity2_login.xml
@@ -8,7 +8,7 @@
     tools:context=".Activity2Login">
 
     <EditText
-        android:id="@+id/email_login"
+        android:id="@+id/edt_Email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -16,7 +16,7 @@
         android:inputType="textPersonName" />
 
     <EditText
-        android:id="@+id/pwd_login"
+        android:id="@+id/edt_Pwd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -24,13 +24,13 @@
         android:inputType="textPersonName" />
 
     <Button
-        android:id="@+id/join"
+        android:id="@+id/btn_SignUp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="회원가입" />
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/btn_Login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="로그인" />
