--- a/app/src/main/res/layout/activity3_signup.xml
+++ b/app/src/main/res/layout/activity3_signup.xml
@@ -8,7 +8,7 @@
     tools:context=".Activity3SignUp">
 
     <EditText
-        android:id="@+id/sign_up_email"
+        android:id="@+id/edt_SignUp_Email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -16,7 +16,7 @@
         android:inputType="textPersonName" />
 
     <EditText
-        android:id="@+id/sign_up_pwd"
+        android:id="@+id/edt_SignUp_Pwd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -24,7 +24,7 @@
         android:inputType="textPersonName" />
 
     <EditText
-        android:id="@+id/sign_up_age"
+        android:id="@+id/edt_SignUp_Age"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -32,7 +32,7 @@
         android:inputType="textPersonName" />
 
     <EditText
-        android:id="@+id/sign_up_name"
+        android:id="@+id/edt_SignUp_Name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -40,7 +40,7 @@
         android:inputType="textPersonName" />
 
     <Button
-        android:id="@+id/sign_up_btn"
+        android:id="@+id/btn_Sign"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="가입하기" />
