--- a/app/src/main/res/layout/activity7_writer.xml
+++ b/app/src/main/res/layout/activity7_writer.xml
@@ -1,86 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".Activity7Writer">
 
-    <LinearLayout
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="26dp"
-            android:orientation="vertical">
-
-        </LinearLayout>
-
-        <EditText
-            android:id="@+id/editTextTextPersonName"
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/memo"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:text="제목을 입력해주세요."
-            android:textSize="22sp"
-            tools:ignore="TouchTargetSizeCheck" />
+            android:orientation="vertical"
+            android:paddingTop="26dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="26dp"
-            android:orientation="vertical">
+            <EditText
+                android:id="@+id/titleEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/memo"
+                android:ems="10"
+                android:hint="제목을 입력해주세요."
+                android:inputType="textPersonName"
+                android:singleLine="true"
+                android:maxLines="1"
+                android:textSize="22sp"
+                tools:ignore="TouchTargetSizeCheck" />
+
+            <EditText
+                android:id="@+id/contentsEditText"
+                android:layout_width="match_parent"
+                android:layout_height="380dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="26dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/memo"
+                android:ems="10"
+                android:gravity="top"
+                android:hint="내용을 입력해주세요."
+                android:inputType="textMultiLine"
+                android:scrollHorizontally="false"
+                android:textSize="22sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_PhotoAtt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:background="#00ff0000"
+                    android:backgroundTint="#FFFFFF"
+                    android:drawableTop="@drawable/photo_att_btn"
+                    android:minWidth="0dp"
+                    android:minHeight="0dp"
+                    tools:ignore="SpeakableTextPresentCheck" />
+
+                <Button
+                    android:id="@+id/btn_WriteFin"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="165dp"
+                    android:layout_marginTop="30dp"
+                    android:background="#00ff0000"
+                    android:backgroundTint="#FFFFFF"
+                    android:drawableTop="@drawable/write_fin_btn"
+                    tools:ignore="SpeakableTextPresentCheck" />
+
+            </LinearLayout>
 
         </LinearLayout>
+    </ScrollView>
 
-        <EditText
-            android:id="@+id/editTextTextPersonName2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/memo"
-            android:ems="10"
-            android:gravity="start"
-            android:inputType="textPersonName"
-            android:text="내용을 입력해주세요."
-            android:textSize="22sp" />
-    </LinearLayout>
-
-    <LinearLayout
+    <include
+        layout="@layout/view_loader"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:visibility="gone"/>
 
-        <Button
-            android:id="@+id/btn_PhotoAtt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:background="#00ff0000"
-            android:backgroundTint="#FFFFFF"
-            android:drawableTop="@drawable/photo_att_btn"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            tools:ignore="SpeakableTextPresentCheck" />
-
-        <Button
-            android:id="@+id/btn_WriteFin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="165dp"
-            android:layout_marginTop="30dp"
-            android:background="#00ff0000"
-            android:backgroundTint="#FFFFFF"
-            android:drawableTop="@drawable/write_fin_btn"
-            tools:ignore="SpeakableTextPresentCheck" />
-
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
