--- a/app/src/main/res/layout/activity1_intro.xml
+++ b/app/src/main/res/layout/activity1_intro.xml
@@ -2,10 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingTop="50dp"
+    android:paddingTop="30dp"
     tools:context=".Activity1Intro">
 
     <ImageView
@@ -13,13 +13,12 @@
         android:layout_width="300dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        app:srcCompat="@drawable/title_txt"
-        tools:layout_gravity="center" />
+        app:srcCompat="@drawable/title_txt" />
 
     <ImageView
         android:id="@+id/imgv_MainDoor"
-        android:layout_width="wrap_content"
-        android:layout_height="377dp"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
         android:layout_gravity="center"
         app:srcCompat="@drawable/main_door" />
 
@@ -28,5 +27,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:paddingTop="15dp"
         app:srcCompat="@drawable/tap_to_enter_txt" />
+
 </LinearLayout>
