--- a/app/src/main/res/layout/activity3_signup.xml
+++ b/app/src/main/res/layout/activity3_signup.xml
@@ -45,4 +45,9 @@
         android:layout_height="wrap_content"
         android:text="가입하기" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"></LinearLayout>
+
 </LinearLayout>
