[20220510 #04 최진혁 배경색 통일]

--- a/app/src/main/res/layout/activity5_main.xml
+++ b/app/src/main/res/layout/activity5_main.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:background="#FFFFFF"
+        android:background="#EBE9E3"
         android:gravity="center">
 
         <LinearLayout
@@ -52,7 +52,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@id/header"
-        android:background="#FFFFFF">
+        android:background="#EBE9E3">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/mainRecyclerView"
