--- a/app/src/main/res/layout/activity1_intro.xml
+++ b/app/src/main/res/layout/activity1_intro.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#EBE9E3"
     android:orientation="vertical"
     android:paddingTop="30dp"
     tools:context=".Activity1Intro">
