--- a/app/src/main/res/layout/activity6_reader.xml
+++ b/app/src/main/res/layout/activity6_reader.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@color/white"
+        android:background="@color/ibori"
         android:fillViewport="true">
 
         <RelativeLayout
@@ -26,7 +26,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
+                android:background="@color/ibori"
                 android:orientation="vertical"
                 android:paddingLeft="14dp"
                 android:paddingRight="14dp">
