--- a/app/src/main/res/layout/activity6_reader.xml
+++ b/app/src/main/res/layout/activity6_reader.xml
@@ -32,7 +32,7 @@
                 android:paddingRight="14dp">
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/tv_Title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="18dp"
@@ -64,7 +64,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/tv_Content"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="7dp"
