220602 #01 최진혁 검색기능추가 [누르면 넘어가게 해야댐, 대충 파일정리]

--- a/app/src/main/res/layout/activity11_notice.xml
+++ b/app/src/main/res/layout/activity11_notice.xml
@@ -10,7 +10,7 @@
     android:paddingEnd="5dp"
     android:paddingBottom="5dp"
     android:orientation="vertical"
-    tools:context=".Activity11Notice">
+    tools:context=".Activity.Activity11Notice">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
