--- a/app/src/main/res/layout/activity3_signup.xml
+++ b/app/src/main/res/layout/activity3_signup.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
     android:orientation="vertical"
-    tools:context=".Activity3SignUp">
+    tools:context=".Activity.Activity3SignUp">
 
     <LinearLayout
         android:layout_width="match_parent"
