--- a/app/src/main/res/layout/activity4_certified.xml
+++ b/app/src/main/res/layout/activity4_certified.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
     android:orientation="vertical"
-    tools:context=".Activity4Certified">
+    tools:context=".Activity.Activity4Certified">
 
     <LinearLayout
         android:layout_width="match_parent"
