--- a/app/src/main/res/layout/activity7_writer.xml
+++ b/app/src/main/res/layout/activity7_writer.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    tools:context=".Activity7Writer">
+    tools:context=".Activity.Activity7Writer">
 
 
     <ScrollView
