--- a/app/src/main/res/layout/activity8_individchat.xml
+++ b/app/src/main/res/layout/activity8_individchat.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
     android:orientation="vertical"
-    tools:context=".Activity8Individchat">
+    tools:context=".Activity.Activity8Individchat">
 
     <LinearLayout
         android:layout_width="match_parent"
