--- a/app/src/main/res/layout/main_items.xml
+++ b/app/src/main/res/layout/main_items.xml
@@ -70,6 +70,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
+                                    android:id="@+id/m_time"
                                     android:paddingLeft="7dp"
                                     android:text="n분 전"
                                     android:textSize="12sp" />
